[gd_scene load_steps=5 format=3 uid="uid://kmecuta4qy01"]

[ext_resource type="Script" uid="uid://dljgmeysbway" path="res://scripts/minigames/city/path_finding/police.gd" id="1_xi5yg"]
[ext_resource type="Texture2D" uid="uid://bax6ms5o4828t" path="res://assets/island/minigame_pearldiving/fish.png" id="1_y8n0v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xi5yg"]
radius = 5.0990195

[sub_resource type="CircleShape2D" id="CircleShape2D_cshbf"]
radius = 31.0

[node name="Police" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_xi5yg")

[node name="PoliceBody" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="PoliceBody"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_y8n0v")

[node name="Shadow" type="NavigationAgent2D" parent="PoliceBody"]
path_postprocessing = 1
debug_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xi5yg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_cshbf")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
